# cpponopoly

./: CMakeLists.txt  DiceRolling  Image3  Makefile  PlayerTurn  README.md  maeein.cpp  main.cpp  prompt
docs/: class-diagram.mermaid
docs/html/: BoardSquareComponent_8cpp.html  BoardSquareComponent_8cpp__incl.map  BoardSquareComponent_8cpp__incl.md5  BoardSquareComponent_8hpp.html  BoardSquareComponent_8hpp.js  BoardSquareComponent_8hpp__dep__incl.map  BoardSquareComponent_8hpp__dep__incl.md5  BoardSquareComponent_8hpp__incl.map  BoardSquareComponent_8hpp__incl.md5  BoardSquareComponent_8hpp_source.html  BoardSquareComposite_8hpp.html  BoardSquareComposite_8hpp.js  BoardSquareComposite_8hpp__incl.map  BoardSquareComposite_8hpp__incl.md5  BoardSquareComposite_8hpp_source.html  BoardView_8cpp.html  BoardView_8cpp__incl.map  BoardView_8cpp__incl.md5  BoardView_8hpp.html  BoardView_8hpp.js  BoardView_8hpp__dep__incl.map  BoardView_8hpp__dep__incl.md5  BoardView_8hpp__incl.map  BoardView_8hpp__incl.md5  BoardView_8hpp_source.html  Board_8cpp.html  Board_8cpp__incl.map  Board_8cpp__incl.md5  Board_8hpp.html  Board_8hpp.js  Board_8hpp__dep__incl.map  Board_8hpp__dep__incl.md5  Board_8hpp__incl.map  Board_8hpp__incl.md5  Board_8hpp_source.html  Button_8cpp.html  Button_8cpp__incl.map  Button_8cpp__incl.md5  Button_8hpp.html  Button_8hpp.js  (+1152 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_15.js  all_2.js  all_3.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  (+69 more)
include/: Board.hpp  Game.hpp  Player_.hpp  Square.hpp  StrategyRentCalculator.hpp  StreetRentCalculator.hpp  UtilityRentCalculator.hpp
include/controller/: Controller.hpp  GameController.hpp  PropertyController.hpp  TurnController.hpp
include/model/: Board.hpp  Game.hpp  GameModel.hpp  MonopolyRules.hpp  Player.hpp  Rules.hpp
include/model/squares/: Property.hpp  Railroad.hpp  SpecialSquare.hpp  Square.hpp  Street.hpp  Utility.hpp
include/patterns/Observer/: IMultiObservable.hpp  IObserver.hpp
include/registries/: BuildingRegistry.hpp  ColorGroupRegistry.hpp  DDDColorGroupRegistry.hpp  PlayerRegistry.hpp  PropertyRegistry.hpp  Registry.hpp
include/utils/: ColorGroups.hpp  Id.hpp
include/utils/Observer/: IMonopolyObserver.hpp  IMultiObservable.hpp  IObservable.hpp  IObserver.hpp
include/utils/Strategy/strategy/: RentCalculator.hpp
include/utils/factory/: IFactory.hpp  SquareFactory.hpp  test.cpp
include/utils/registries/: PlayerRegistry.hpp  PropertyRegistry.hpp  Registry.hpp
include/utils/registry/: IRegistry.hpp  PlayerRegistry.hpp  SquareRegistry.hpp
include/utils/repository/: IRepository.hpp
include/utils/state/: GameState.hpp  IMonopolyState.hpp  LandState.hpp  RollDiceState.hpp  StartState.hpp  TurnState.hpp
include/utils/strategy/: RailroadRentCalculator.hpp  UtilityRentCalculator.hpp
include/view/: Board.hpp  GameView.hpp  Gui.hpp  MonopolyObserver.hpp  SFMLGui.hpp  View.hpp
include/view/components/: BoardSquare.hpp  BoardSquareComponent.hpp  BoardSquareComposite.hpp  BoardView.hpp  Button.hpp  ChanceSquare.hpp  CommunityChestSquare.hpp  CornerSquare.hpp  FreeParkingSquare.hpp  GoSquare.hpp  GoToJailSquare.hpp  IncomeTaxSquare.hpp  JailSquare.hpp  MonopolyBoard.hpp  PlayerTokenComponent.hpp  RailroadSquare.hpp  SFComponent.hpp  SFComposite.hpp  StreetSquare.hpp  UIComponent.hpp  UserView.hpp  UtilitySquare.hpp  Window.hpp
src/controller/: Controller.cpp  GameController.cpp  GameController.hpp  PropertyController.cpp  TurnController.cpp
src/controller/states/: GameState.cpp  RollDiceState.cpp  StartState.cpp  TurnState.cpp
src/model/: Board.cpp  Board.hpp  Game.cpp  Game.hpp  GameModel.cpp  Player.cpp
src/model/player/: Player.cpp  Player.hpp
src/model/squares/: Property.cpp  Property.hpp  Railroad.hpp  SpecialSquare.cpp  SpecialSquare.hpp  Square.cpp  Square.hpp  Street.hpp
src/registries/: PropertyRegistry.cpp
src/utils/Registry/: PropertyRegistry.cpp
src/utils/registry/: PlayerRegistry.cpp  SquareRegistry.cpp
src/utils/repository/: PropertyRepository.cpp
src/view/: Board.cpp  GameView.cpp  Gui.cpp  View.cpp  main.cpp  main_button.cpp  main_button_.cpp  monopoly
src/view/components/: BoardSquare.cpp  BoardSquareComponent.cpp  BoardView.cpp  Button.cpp  ChanceSquare.cpp  CommunityChestSquare.cpp  FreeParkingSquare.cpp  GoSquare.cpp  GoToJailSquare.cpp  IncomeTaxSquare.cpp  JailSquare.cpp  MonopolyBoard.cpp  PlayerTokenComponent.cpp  RailroadSquare.cpp  StreetSquare.cpp  UserView.cpp  UtilitySquare.cpp
tests/: CMakeLists.txt
tests/model/: Game_test.cpp  tests
tests/model/squares/: tests  tests.cpp
tests/utils/: Id_tests.cpp  Registry_test.cpp  player_registry_test.cpp  square_registry_test.cpp  tests
tests/view/: Gui_test.cpp
